; ModuleID = '/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/utils/extr_wpabuf.c_wpabuf_put.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/utils/extr_wpabuf.c_wpabuf_put.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wpabuf = type { i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @wpabuf_put(%struct.wpabuf* %0, i64 %1) #0 {
  %3 = alloca %struct.wpabuf*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  store %struct.wpabuf* %0, %struct.wpabuf** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.wpabuf*, %struct.wpabuf** %3, align 8
  %7 = call i8* @wpabuf_mhead_u8(%struct.wpabuf* %6)
  %8 = load %struct.wpabuf*, %struct.wpabuf** %3, align 8
  %9 = call i32 @wpabuf_len(%struct.wpabuf* %8)
  %10 = sext i32 %9 to i64
  %11 = getelementptr i8, i8* %7, i64 %10
  store i8* %11, i8** %5, align 8
  %12 = load i64, i64* %4, align 8
  %13 = load %struct.wpabuf*, %struct.wpabuf** %3, align 8
  %14 = getelementptr inbounds %struct.wpabuf, %struct.wpabuf* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = add i64 %15, %12
  store i64 %16, i64* %14, align 8
  %17 = load %struct.wpabuf*, %struct.wpabuf** %3, align 8
  %18 = getelementptr inbounds %struct.wpabuf, %struct.wpabuf* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = load %struct.wpabuf*, %struct.wpabuf** %3, align 8
  %21 = getelementptr inbounds %struct.wpabuf, %struct.wpabuf* %20, i32 0, i32 1
  %22 = load i64, i64* %21, align 8
  %23 = icmp sgt i64 %19, %22
  br i1 %23, label %24, label %28

24:                                               ; preds = %2
  %25 = load %struct.wpabuf*, %struct.wpabuf** %3, align 8
  %26 = load i64, i64* %4, align 8
  %27 = call i32 @wpabuf_overflow(%struct.wpabuf* %25, i64 %26)
  br label %28

28:                                               ; preds = %24, %2
  %29 = load i8*, i8** %5, align 8
  ret i8* %29
}

declare dso_local i8* @wpabuf_mhead_u8(%struct.wpabuf*) #1

declare dso_local i32 @wpabuf_len(%struct.wpabuf*) #1

declare dso_local i32 @wpabuf_overflow(%struct.wpabuf*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
